--- a/MediaParsade/build.gradle
+++ b/MediaParsade/build.gradle
@@ -22,6 +22,20 @@ repositories {
 }
 
 dependencies {
+
+
+	//JdbcTemplate 추가
+	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
+	//MyBatis 스프링 부트 3.0 추가
+	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.1'
+
+	//H2 데이터베이스 추가
+	/*runtimeOnly 'com.h2database:h2'*/
+
+	//MYSQL 데이터베이스 추가
+	runtimeOnly 'com.mysql:mysql-connector-j'
+
+
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
