--- a/MediaParsade/src/main/resources/application.properties
+++ b/MediaParsade/src/main/resources/application.properties
@@ -14,3 +14,4 @@ mybatis.type-aliases-package=Parsade.MediaParsade.domain
 mybatis.configuration.map-underscore-to-camel-case=true
 logging.level.Parsade.MediaParsade.repository.mybatis=trace
 
+session.setMaxInactiveInterval(36000);
