--- a/MediaParsade/src/main/resources/application.properties
+++ b/MediaParsade/src/main/resources/application.properties
@@ -15,3 +15,9 @@ mybatis.configuration.map-underscore-to-camel-case=true
 logging.level.Parsade.MediaParsade.repository.mybatis=trace
 
 session.setMaxInactiveInterval(36000);
+
+# CORS 설정
+spring.mvc.cors.mapping=/**
+spring.mvc.cors.allowed-origins=*
+spring.mvc.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
+spring.mvc.cors.allowed-headers=*
