--- a/MediaParsade/src/main/resources/application.properties
+++ b/MediaParsade/src/main/resources/application.properties
@@ -4,9 +4,13 @@
 #logging.level.org.springframework.jdbc=debug
 
 #MYSQL ?????? ??
-spring.datasource.url=jdbc:mysql://localhost:3306/mediafasdeinfo?serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=king9019!@
+#spring.datasource.url=jdbc:mysql://localhost:3306/mediafasdeinfo?serverTimezone=UTC
+#spring.datasource.username=root
+#spring.datasource.password=king9019!@
+
+spring.datasource.url=jdbc:mysql://3.38.231.213:3306/mediafasdeinfo?serverTimezone=UTC
+spring.datasource.username=user
+spring.datasource.password=1234
 
 
 #MyBatis
