--- a/MediaParsade/src/main/resources/application.properties
+++ b/MediaParsade/src/main/resources/application.properties
@@ -20,8 +20,9 @@ logging.level.Parsade.MediaParsade.repository.mybatis=trace
 
 
 
-# CORS 설정
+# CORS \uC124\uC815
 spring.mvc.cors.mapping=/**
 spring.mvc.cors.allowed-origins=*
 spring.mvc.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
 spring.mvc.cors.allowed-headers=*
+
